--- a/_bioschemas.html
+++ b/_bioschemas.html
@@ -4,7 +4,7 @@
   "@type": "LearningResource",
   "name": "Introductory Spatial 'Omics Analysis",
   "description": "The complete set of tutorials, slides, and practical exercises for the Introductory Spatial 'Omics Analysis 2024 Canadian Bioinformatics Workshop, hosted on GitHub Pages.",
-  "url": "https://bioinformaticsdotca.github.io/ISO_2024}}",
+  "url": "https://bioinformaticsdotca.github.io/ISO_2024",
   "learningResourceType": ["tutorial", "slides", "exercise"],
   "inLanguage": "en",
   "license": "https://creativecommons.org/licenses/by/4.0/",
